--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "minimist": "^1.2.6",
     "mongodb": "^4.4.1",
     "next": "latest",
     "react": "^17.0.2",
