--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "tailwind-merge": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
