--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "minimist": "^1.2.6",
     "mongodb": "^4.7.0",
     "next": "latest",
@@ -15,6 +16,7 @@
     "tailwind-merge": "^1.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
