--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "cors": "^2.8.5",
     "minimist": "^1.2.6",
     "mongodb": "^4.7.0",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^12.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "tailwind-merge": "^1.3.0"
   },
