--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "cors": "^2.8.5",
     "minimist": "^1.2.6",
-    "mongodb": "^4.7.0",
+    "mongodb": "^4.8.0",
     "next": "^12.2.2",
+    "next-auth": "^4.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
