--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "@tailwindcss/forms": "^0.5.2",
     "cors": "^2.8.5",
     "minimist": "^1.2.6",
     "mongodb": "^4.8.0",
