--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@tailwindcss/forms": "^0.5.2",
+    "chart.js": "^3.9.1",
     "cors": "^2.8.5",
     "minimist": "^1.2.6",
     "mongodb": "^4.8.0",
     "next": "^12.2.2",
     "next-auth": "^4.10.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "tailwind-merge": "^1.5.1"
