--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@next-auth/mongodb-adapter": "^1.0.3",
     "chart.js": "^3.9.1",
     "cors": "^2.8.5",
+    "export-from-json": "^1.6.0",
     "minimist": "^1.2.6",
     "mongodb": "^4.8.0",
     "next": "^12.2.2",
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.12",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
